salesforce/force-app/main/default/objects/Checklist_Item__c/Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>Credentialing POC — Checklist Item</description>
    <label>Checklist Item</label>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>