salesforce/force-app/main/default/objects/Checklist_Item__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description></description>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>