salesforce/force-app/main/default/objects/Checklist_Item__c/fields/Credentialing_Application__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Application__c</fullName>
    <description>Parent application</description>
    <label>Credentialing Application</label>
    <referenceTo>Credentialing_Application__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>