salesforce/force-app/main/default/objects/Checklist_Item__c/fields/Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Item_Key__c</fullName>
    <description>Template key e.g. license_copy</description>
    <label>Item Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>